Fixed stretching problem background.

--- a/website.css
+++ b/website.css
@@ -11,6 +11,30 @@
 	text-align: center;
 }
 
+.background-slide1 {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: url(images/slide1.jpg) no-repeat center center fixed;
+	background-size: cover;
+}
+
+.background-slide2 {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: url(images/slide2.jpg) no-repeat center center fixed;
+	background-size: cover;
+}
+
+.background-slide3 {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background: url(images/slide3.jpg) no-repeat center center fixed;
+	background-size: cover;
+}
+
 .slide-description { 
 	position: absolute; 
 	left: 0;
